Bug 428359 - Transform mask/color picker interaction
Summary: Transform mask/color picker interaction
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 4.4.0
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-27 20:15 UTC by To_zero
Modified: 2021-05-07 12:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description To_zero 2020-10-27 20:15:16 UTC
SUMMARY

Accidental use of color picker for selected layer via Strg(Ctrl)+Alt hotkey reliably crashes krita. Happens only with the hotkey, using color picker tool with a single layer option works fine

STEPS TO REPRODUCE

1. Add transform mask to a layer
2. Use single layer hotkey (Ctrl+Alt) for color selector on the mask

OBSERVED RESULT

Crash


EXPECTED RESULT

Nothing

SOFTWARE/OS VERSIONS
Windows: 10, x64
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2020-10-27 20:23:56 UTC
Could you please check whether there's a krita-crash.log file in %LOCALAPPDATA% and if so, attach it to this report?
Comment 2 Ahab Greybeard 2020-10-27 21:35:15 UTC
I can confirm this for all appimages from 4.2.9 onwards including the latest 4.4.1.alpha (git ec67f1f)

Teminal output:
QPainter::begin: Paint device returned engine == 0, type: 3
QPainter::setCompositionMode: Painter not active
QPainter::begin: Paint device returned engine == 0, type: 3
QPainter::setCompositionMode: Painter not active
QPainter::begin: Paint device returned engine == 0, type: 3
QPainter::setCompositionMode: Painter not active
ASSERT (krita): "dev" in file /home/appimage/workspace/Krita_Release_Appimage_Build/krita/libs/ui/tool/kis_tool_utils.cpp, line 37
Aborted
Comment 3 Ahab Greybeard 2020-10-28 10:28:16 UTC
Doing this on Windows 10, It did not generate a crash log. The krita.log file has this:

SESSION: 28 Oct 2020 10:21:56 +0100. Executing C:\Program Files\Krita (x64)\bin\krita.exe

Krita Version: 4.4.0, Qt version compiled: 5.12.9, loaded: 5.12.9. Process ID: 3252
-- -- -- -- -- -- -- --
28 Oct 2020 10:21:56 +0100: Style: fusion. Available styles: windowsvista, Windows, Fusion
28 Oct 2020 10:22:21 +0100: Importing application/x-krita to application/x-krita. Location: C:/Users/adminahab/Desktop/colourbars.kra. Real location: C:/Users/adminahab/Desktop/colourbars.kra. Batchmode: 0
28 Oct 2020 10:22:21 +0100: Loaded image from application/x-krita. Size: 2048 * 2048 pixels, 1.38889 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB-elle-V2-srgbtrc.icc). Layers: 3
28 Oct 2020 10:22:38 +0100: ASSERT (krita): "dev" in file C:\Packaging\workspace\Krita_Release_Windows64_Build\krita\libs\ui\tool\kis_tool_utils.cpp, line 37
Comment 4 Bug Janitor Service 2021-05-07 11:46:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/836
Comment 5 sh_zam 2021-05-07 12:12:52 UTC
Git commit 480565596a6de2b4c500909779414fb926f6c6d2 by Sharaf Zaman.
Committed on 07/05/2021 at 11:18.
Pushed by dkazakov into branch 'master'.

Crashfix: when sampling transform mask node

M  +13   -7    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/480565596a6de2b4c500909779414fb926f6c6d2