Crashfix: when sampling transform mask node

BUG:428359